--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "history.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "minishell.h": "c"
     }
 }
