--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "history.h": "c",
         "string.h": "c",
-        "minishell.h": "c"
+        "minishell.h": "c",
+        "libft.h": "c"
     }
 }
